# sendspin-relay

./: .gitignore  .gitmodules  Dockerfile  build-sendspin.sh  docker-compose.yml  shell.nix  update-sendspin.sh  zip.sh
.github/workflows/: docker-publish.yml
server/: Cargo.toml  relay.py
server/src/: main.rs
webroot/: app.js  index.html  logger.js  sendspin.js  silent-audio.js  styles.css  sync-graph.js
webroot/assets/: sendspin.js
