[package]
name = "sendspin-relay"
version = "1.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
axum-macros = "0.5.1"
base64 = "0.22.1"
futures-util = "0.3.32"
ipnet = "2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.6.11", features = ["fs", "cors"] }
